--- a/package.json
+++ b/package.json
@@ -3,12 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/clickable": "^2.1.0",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vis.gl/react-google-maps": "^0.7.1",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.8.1",
+    "framer-motion": "^11.0.8",
+    "node-polyfill-webpack-plugin": "^3.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "postcss-loader": "^8.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-places-autocomplete": "^4.0.1",
+    "react-hook-form": "^7.51.1",
+    "react-images-uploading": "^3.1.7",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "stream-chat": "^8.24.0",
+    "stream-chat-react": "^11.12.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
