--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@react-email/components": "0.0.16",
     "@stripe/react-stripe-js": "^2.6.2",
     "@stripe/stripe-js": "^3.2.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -24,11 +25,13 @@
     "postcss-loader": "^8.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-email": "2.1.1",
     "react-google-places-autocomplete": "^4.0.1",
     "react-hook-form": "^7.51.1",
     "react-images-uploading": "^3.1.7",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "resend": "^3.2.0",
     "stream-chat": "^8.24.0",
     "stream-chat-react": "^11.12.0",
     "uuid": "^9.0.1",
@@ -36,16 +39,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "email dev --dir src/emails",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+ 
   "browserslist": {
     "production": [
       ">0.2%",
@@ -53,9 +52,11 @@
       "not op_mini all"
     ],
     "development": [
+      
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+   
     ]
   }
 }
