--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-email": "2.1.1",
     "react-google-places-autocomplete": "^4.0.1",
     "react-hook-form": "^7.51.1",
+    "react-icons": "^5.1.0",
     "react-images-uploading": "^3.1.7",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
@@ -57,11 +58,9 @@
       "not op_mini all"
     ],
     "development": [
-      
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-   
     ]
   }
 }
