--- a/package.json
+++ b/package.json
@@ -51,6 +51,12 @@
       "react-app/jest"
     ]
   },
+  "hosting": {
+    "rewrites": [ {
+      "source": "**",
+      "destination": "/index.html"
+     } ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
