--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-polyfill-webpack-plugin": "^3.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "plausible-tracker": "^0.3.8",
     "postcss-loader": "^8.1.1",
     "posthog-js": "^1.131.0",
     "react": "^18.2.0",
