--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@react-email/components": "0.0.16",
+    "@react-email/components": "^0.0.16",
     "@stripe/react-stripe-js": "^2.6.2",
     "@stripe/stripe-js": "^3.2.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -24,10 +24,9 @@
     "path-browserify": "^1.0.1",
     "plausible-tracker": "^0.3.8",
     "postcss-loader": "^8.1.1",
-    "posthog-js": "^1.131.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-email": "2.1.1",
+    "react-email": "^2.1.2",
     "react-google-places-autocomplete": "^4.0.1",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.1.0",
