--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "path-browserify": "^1.0.1",
     "plausible-tracker": "^0.3.8",
     "postcss-loader": "^8.1.1",
+    "preline": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-email": "^2.1.2",
@@ -63,5 +64,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
