--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@react-email/components": "^0.0.16",
+    "@react-email/components": "0.0.16",
     "@stripe/react-stripe-js": "^2.6.2",
     "@stripe/stripe-js": "^3.2.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -27,7 +27,7 @@
     "preline": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-email": "^2.1.2",
+    "react-email": "^2.1.2-canary.0",
     "react-google-places-autocomplete": "^4.0.1",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.1.0",
