--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vis.gl/react-google-maps": "^0.7.1",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^8.0.4",
     "firebase": "^10.8.1",
     "framer-motion": "^11.0.8",
     "node-polyfill-webpack-plugin": "^3.0.0",
