--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "resend": "^3.2.0",
     "stream-chat": "^8.24.0",
     "stream-chat-react": "^11.12.0",
+    "timeago.js": "^4.0.2",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
