--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "preline": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-email": "^2.1.2-canary.0",
+    "react-email": "2.1.4",
     "react-google-places-autocomplete": "^4.0.1",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.1.0",
