--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "path-browserify": "^1.0.1",
     "plausible-tracker": "^0.3.8",
     "postcss-loader": "^8.1.1",
+    "posthog-js": "^1.139.1",
     "preline": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
