--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss-loader": "^8.1.1",
     "posthog-js": "^1.139.1",
     "preline": "^2.1.0",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-email": "2.1.4",
