--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-images-uploading": "^3.1.7",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-share": "^5.1.0",
     "resend": "^3.2.0",
     "stream-chat": "^8.24.0",
     "stream-chat-react": "^11.12.0",
