--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-email": "2.1.4",
     "react-google-places-autocomplete": "^4.0.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.1.0",
     "react-images-uploading": "^3.1.7",
