--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@googlemaps/markerclusterer": "^2.5.3",
     "@react-email/components": "0.0.16",
     "@stripe/react-stripe-js": "^2.6.2",
     "@stripe/stripe-js": "^3.2.0",
@@ -19,6 +20,8 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.4",
     "firebase": "^10.8.1",
+
+    
     "framer-motion": "^11.0.8",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "os-browserify": "^0.3.0",
@@ -42,6 +45,7 @@
     "resend": "^3.2.0",
     "stream-chat": "^8.24.0",
     "stream-chat-react": "^11.12.0",
+    "supercluster": "^8.0.1",
     "timeago.js": "^4.0.2",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
