--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/styled": "^11.11.0",
     "@googlemaps/markerclusterer": "^2.5.3",
     "@react-email/components": "0.0.16",
+    "@react-google-maps/api": "^2.19.3",
     "@stripe/react-stripe-js": "^2.6.2",
     "@stripe/stripe-js": "^3.2.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -20,8 +21,6 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.4",
     "firebase": "^10.8.1",
-
-    
     "framer-motion": "^11.0.8",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "os-browserify": "^0.3.0",
@@ -46,6 +45,7 @@
     "stream-chat": "^8.24.0",
     "stream-chat-react": "^11.12.0",
     "supercluster": "^8.0.1",
+    "supercluster-googlemaps-adapter": "^1.0.13",
     "timeago.js": "^4.0.2",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
