--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@stripe/react-stripe-js": "^2.6.2",
     "@stripe/stripe-js": "^3.2.0",
+    "@tailwindcss/typography": "^0.5.13",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +23,7 @@
     "embla-carousel-react": "^8.0.4",
     "firebase": "^10.8.1",
     "framer-motion": "^11.0.8",
+    "markdown-draft-js": "^2.4.0",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
@@ -32,12 +34,14 @@
     "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-email": "2.1.4",
     "react-google-places-autocomplete": "^4.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.1.0",
     "react-images-uploading": "^3.1.7",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-share": "^5.1.0",
