--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-icons": "^5.1.0",
     "react-images-uploading": "^3.1.7",
     "react-markdown": "^9.0.1",
+    "react-pdf": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-share": "^5.1.0",
