--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "node-polyfill-webpack-plugin": "^3.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "pdf-image": "^2.0.0",
+    "pdfjs-dist": "^4.4.168",
     "plausible-tracker": "^0.3.8",
     "postcss-loader": "^8.1.1",
     "posthog-js": "^1.139.1",
