--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vis.gl/react-google-maps": "^0.7.1",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
+    "draft-js-import-markdown": "^1.4.1",
     "embla-carousel-react": "^8.0.4",
     "firebase": "^10.8.1",
     "framer-motion": "^11.0.8",
