--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@googlemaps/markerclusterer": "^2.5.3",
+    "@iframe-resizer/react": "^5.2.6",
     "@preline/collapse": "^2.4.1",
     "@react-email/components": "0.0.16",
     "@react-google-maps/api": "^2.19.3",
