--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
     "react-markdown": "^9.0.1",
     "react-pdf": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "react-scri pts": "5.0.1",
+    "react-scripts": "5.0.1",
     "react-share": "^5.1.0",
+    "recharts": "^2.12.7",
     "resend": "^3.2.0",
     "stream-chat": "^8.24.0",
     "stream-chat-react": "^11.12.0",
