--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.1.0",
     "react-images-uploading": "^3.1.7",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-markdown": "^9.0.1",
     "react-pdf": "^9.1.0",
     "react-router-dom": "^6.22.3",
