--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.1.0",
+    "react-iframe": "^1.8.5",
     "react-images-uploading": "^3.1.7",
     "react-lazy-load-image-component": "^1.6.2",
     "react-markdown": "^9.0.1",
