--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "preline": "^2.1.0",
     "quill": "^2.0.2",
     "react": "^18.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-email": "2.1.4",
