--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-email": "2.1.4",
     "react-google-places-autocomplete": "^4.0.1",
+    "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.1.0",
