--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "firebase": "^10.8.1",
     "framer-motion": "^11.0.8",
     "html-to-draftjs": "^1.5.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "markdown-draft-js": "^2.4.0",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "os-browserify": "^0.3.0",
