--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-lazy-load-image-component": "^1.6.2",
     "react-markdown": "^9.0.1",
     "react-pdf": "^9.1.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-share": "^5.1.0",
