--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-share": "^5.1.0",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.12.7",
     "resend": "^3.2.0",
     "stream-chat": "^8.24.0",
