--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.3",
     "react-share": "^5.1.0",
     "react-toastify": "^10.0.6",
     "recharts": "^2.12.7",
