career path v1 test

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^0.7.1",
+    "@xyflow/react": "^12.3.6",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
     "draft-js-import-markdown": "^1.4.1",
@@ -41,6 +42,7 @@
     "preline": "^2.1.0",
     "quill": "^2.0.2",
     "react": "^18.2.0",
+    "react-d3-tree": "^3.6.2",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
