--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-select": "^5.8.3",
     "react-share": "^5.1.0",
     "react-toastify": "^10.0.6",
+    "react-tooltip": "^5.28.0",
     "recharts": "^2.12.7",
     "resend": "^3.2.0",
     "stream-chat": "^8.24.0",
