--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@preline/collapse": "^2.4.1",
     "@react-email/components": "0.0.16",
     "@react-google-maps/api": "^2.19.3",
+    "@react-pdf/renderer": "^4.2.1",
     "@stripe/react-stripe-js": "^2.6.2",
     "@stripe/stripe-js": "^3.2.0",
     "@tailwindcss/typography": "^0.5.13",
