--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "stream-chat-react": "^11.12.0",
     "supercluster": "^8.0.1",
     "supercluster-googlemaps-adapter": "^1.0.13",
+    "swiper": "^11.2.5",
     "timeago.js": "^4.0.2",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
