--- a/package.json
+++ b/package.json
@@ -63,11 +63,13 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.3",
     "react-share": "^5.1.0",
+    "react-slick": "^0.30.3",
     "react-to-print": "^3.0.5",
     "react-toastify": "^11.0.3",
     "react-tooltip": "^5.28.0",
     "recharts": "^2.12.7",
     "resend": "^3.2.0",
+    "slick-carousel": "^1.8.1",
     "stream-chat": "^8.24.0",
     "stream-chat-react": "^11.12.0",
     "supercluster": "^8.0.1",
