--- a/package.json
+++ b/package.json
@@ -1,112 +1,112 @@
 {
-  "name": "test",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@chakra-ui/clickable": "^2.1.0",
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@googlemaps/markerclusterer": "^2.5.3",
-    "@iframe-resizer/react": "^5.2.6",
-    "@preline/collapse": "^2.4.1",
-    "@react-email/components": "0.0.16",
-    "@react-google-maps/api": "^2.19.3",
-    "@react-pdf/renderer": "^4.2.1",
-    "@stripe/react-stripe-js": "^2.6.2",
-    "@stripe/stripe-js": "^3.2.0",
-    "@tailwindcss/typography": "^0.5.13",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@vis.gl/react-google-maps": "^0.7.1",
-    "@xyflow/react": "^12.3.6",
-    "crypto-browserify": "^3.12.0",
-    "dotenv": "^16.4.5",
-    "draft-js-import-markdown": "^1.4.1",
-    "embla-carousel-react": "^8.0.4",
-    "firebase": "^10.8.1",
-    "framer-motion": "^11.0.8",
-    "html-to-draftjs": "^1.5.0",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.2",
-    "markdown-draft-js": "^2.4.0",
-    "node-polyfill-webpack-plugin": "^3.0.0",
-    "os-browserify": "^0.3.0",
-    "path-browserify": "^1.0.1",
-    "pdf-image": "^2.0.0",
-    "pdfjs-dist": "^4.4.168",
-    "plausible-tracker": "^0.3.8",
-    "postcss-loader": "^8.1.1",
-    "posthog-js": "^1.187.2",
-    "preline": "^2.1.0",
-    "quill": "^2.0.2",
-    "react": "^18.2.0",
-    "react-d3-tree": "^3.6.2",
-    "react-datepicker": "^7.5.0",
-    "react-dom": "^18.2.0",
-    "react-draft-wysiwyg": "^1.15.0",
-    "react-email": "2.1.4",
-    "react-google-places-autocomplete": "^4.0.1",
-    "react-gtm-module": "^2.0.11",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.53.0",
-    "react-icons": "^5.1.0",
-    "react-iframe": "^1.8.5",
-    "react-images-uploading": "^3.1.7",
-    "react-lazy-load-image-component": "^1.6.2",
-    "react-markdown": "^9.0.1",
-    "react-pdf": "^9.1.0",
-    "react-player": "^2.16.0",
-    "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
-    "react-select": "^5.8.3",
-    "react-share": "^5.1.0",
-    "react-slick": "^0.30.3",
-    "react-to-print": "^3.0.5",
-    "react-toastify": "^11.0.3",
-    "react-tooltip": "^5.28.0",
-    "recharts": "^2.12.7",
-    "resend": "^3.2.0",
-    "slick-carousel": "^1.8.1",
-    "stream-chat": "^8.24.0",
-    "stream-chat-react": "^11.12.0",
-    "supercluster": "^8.0.1",
-    "supercluster-googlemaps-adapter": "^1.0.13",
-    "swiper": "^11.2.5",
-    "timeago.js": "^4.0.2",
-    "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4",
-    "zustand": "^4.5.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "dev": "email dev --dir src/emails",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@tailwindcss/forms": "^0.5.9",
-    "tailwindcss": "^3.4.14"
-  }
+ "name": "@full/app",
+ "version": "0.1.0",
+ "private": true,
+ "dependencies": {
+  "@chakra-ui/clickable": "^2.1.0",
+  "@chakra-ui/icons": "^2.1.1",
+  "@chakra-ui/react": "^2.8.2",
+  "@emotion/react": "^11.11.4",
+  "@emotion/styled": "^11.11.0",
+  "@full/shared": "^1.0.0",
+  "@googlemaps/markerclusterer": "^2.5.3",
+  "@iframe-resizer/react": "^5.2.6",
+  "@preline/collapse": "^2.4.1",
+  "@react-google-maps/api": "^2.19.3",
+  "@react-pdf/renderer": "^4.2.1",
+  "@stripe/react-stripe-js": "^2.6.2",
+  "@stripe/stripe-js": "^3.2.0",
+  "@tailwindcss/typography": "^0.5.13",
+  "@testing-library/jest-dom": "^5.17.0",
+  "@testing-library/react": "^13.4.0",
+  "@testing-library/user-event": "^13.5.0",
+  "@vis.gl/react-google-maps": "^0.7.1",
+  "@xyflow/react": "^12.3.6",
+  "crypto-browserify": "^3.12.0",
+  "dotenv": "^16.4.5",
+  "draft-js-import-markdown": "^1.4.1",
+  "embla-carousel-react": "^8.0.4",
+  "firebase": "^10.8.1",
+  "framer-motion": "^11.0.8",
+  "html-to-draftjs": "^1.5.0",
+  "html2canvas": "^1.4.1",
+  "jspdf": "^2.5.2",
+  "markdown-draft-js": "^2.4.0",
+  "node-polyfill-webpack-plugin": "^3.0.0",
+  "os-browserify": "^0.3.0",
+  "path-browserify": "^1.0.1",
+  "pdf-image": "^2.0.0",
+  "pdfjs-dist": "^4.4.168",
+  "plausible-tracker": "^0.3.8",
+  "postcss-loader": "^8.1.1",
+  "posthog-js": "^1.187.2",
+  "preline": "^2.1.0",
+  "quill": "^2.0.2",
+  "react": "^18.3.1",
+  "react-d3-tree": "^3.6.2",
+  "react-datepicker": "^7.5.0",
+  "react-dom": "^18.3.1",
+  "react-draft-wysiwyg": "^1.15.0",
+  "react-email": "2.1.4",
+  "react-google-places-autocomplete": "^4.0.1",
+  "react-gtm-module": "^2.0.11",
+  "react-helmet": "^6.1.0",
+  "react-hook-form": "^7.53.0",
+  "react-icons": "^5.1.0",
+  "react-iframe": "^1.8.5",
+  "react-images-uploading": "^3.1.7",
+  "react-lazy-load-image-component": "^1.6.2",
+  "react-markdown": "^9.0.1",
+  "react-pdf": "^9.1.0",
+  "react-player": "^2.16.0",
+  "react-router-dom": "^6.22.3",
+  "react-scripts": "5.0.1",
+  "react-select": "^5.8.3",
+  "react-share": "^5.1.0",
+  "react-slick": "^0.30.3",
+  "react-to-print": "^3.0.5",
+  "react-toastify": "^11.0.3",
+  "react-tooltip": "^5.28.0",
+  "recharts": "^2.12.7",
+  "resend": "^3.2.0",
+  "slick-carousel": "^1.8.1",
+  "stream-chat": "^8.24.0",
+  "stream-chat-react": "^11.12.0",
+  "supercluster": "^8.0.1",
+  "supercluster-googlemaps-adapter": "^1.0.13",
+  "swiper": "^11.2.5",
+  "timeago.js": "^4.0.2",
+  "uuid": "^9.0.1",
+  "web-vitals": "^2.1.4",
+  "zustand": "^4.5.2"
+ },
+ "scripts": {
+  "start": "react-scripts start",
+  "dev": "email dev --dir src/emails",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+ },
+ "eslintConfig": {
+  "extends": [
+   "react-app",
+   "react-app/jest"
+  ]
+ },
+ "browserslist": {
+  "production": [
+   ">0.2%",
+   "not dead",
+   "not op_mini all"
+  ],
+  "development": [
+   "last 1 chrome version",
+   "last 1 firefox version",
+   "last 1 safari version"
+  ]
+ },
+ "devDependencies": {
+  "@tailwindcss/forms": "^0.5.9",
+  "tailwindcss": "^3.4.14"
+ }
 }
